# sewinger

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/: labels.yml  release-drafter.yml
.github/workflows/: labeler.yml  release.yml  test.yml
_sources/: index.md.txt
_sources/apidocs/: index.rst.txt
_sources/apidocs/sewinger/: sewinger.md.txt
apidocs/: index.html
apidocs/sewinger/: sewinger.html
docs/: conf.py  index.md
docs/pages/: index.md
sewinger/: __init__.py
