[tool.poetry]
name = "sewinger"
version = "0.1.2"
description = "A simple, lightweight Python dependency injection framework. Get sewing right away."
authors = ["goddessana <twicegoddessana1229@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
myst-parser = "^2.0.0"
sphinxawesome-theme = "^5.0.1"
pytest = "^7.4.4"
sphinx-autodoc2 = "^0.5.0"
ruff = "^0.1.11"
pre-commit = "^3.6.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
